--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ colored = "2.1.0"
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.132"
+regex = "1.11.1"
